--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-number-format": "^5.3.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.2",
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
