--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "jodit-react": "^4.0.15",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-date-range": "^2.0.0-alpha.4",
@@ -26,10 +27,11 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.8",
     "recharts": "^2.12.2",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
