--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.8",
     "recharts": "^2.12.2",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
