--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.2",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4",
